force-app/main/default/objects/Apartment__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>The Street Address of the Apartment or Unit</description>
    <inlineHelpText>The Street Address of the Apartment or Unit</inlineHelpText>
    <label>Address</label>
    <type>Address</type>
</CustomField>