force-app/main/default/objects/Apartment__c/fields/ApartmentOwnedBy__c.field-meta.xml
<CustomField>
    <fullName>ApartmentOwnedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owned By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Apartments</relationshipLabel>
    <relationshipName>ApartmentOwners</relationshipName>
    <type>Lookup</type>
</CustomField>