force-app/main/default/objects/Apartment__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Apartments</relationshipLabel>
    <relationshipName>Apartments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>