force-app/main/default/objects/Apartment__c/fields/Door__c.field-meta.xml
<CustomField>
    <fullName>Door__c</fullName>
    <label>Door</label>
    <length>10</length>
    <type>Text</type>
</CustomField>