force-app/main/default/objects/Apartment__c/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <description>The Horizontal Placement of the Unit in the Apartment Building</description>
    <inlineHelpText>The Horizontal Placement of the Unit in the Apartment Building</inlineHelpText>
    <label>Line</label>
    <length>250</length>
    <type>Text</type>
</CustomField>