force-app/main/default/objects/Apartment__c/fields/StreetAddress__c.field-meta.xml
<CustomField>
    <fullName>StreetAddress__c</fullName>
    <label>Building Street Address</label>
    <type>Address</type>
</CustomField>