force-app/main/default/objects/Apartment__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>The Apartment or Building Front Door Number or reference</description>
    <inlineHelpText>The Apartment or Building Front Door Number or reference</inlineHelpText>
    <label>Unit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>